Apply suggestions * Refactor locations * Refactor comparator * Add Javadoc for ASM injection points